--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ footer{
                     <span style="color: red;">My</span>Fitness<i class="fa-solid fa-dumbbell fa-flip-both fa-lg" style="color: #ff2424;"></i>
             </div>
             <div id="items">
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/index.html">Home</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym2.html">About Us</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym3.html">Training</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html">Contact Us</a></li>
+                <li><a class="a1" href="index.html">Home</a></li>
+                <li><a class="a1" href="gym2.html">About Us</a></li>
+                <li><a class="a1" href="gym3.html">Training</a></li>
+                <li><a class="a1" href="gym5.html">Contact Us</a></li>
              
             </div>
         </nav>
