--- a/gym5.html
+++ b/gym5.html
@@ -173,10 +173,10 @@ input{
                     <span style="color: red;">My</span>Fitness<i class="fa-solid fa-dumbbell fa-flip-both fa-lg" style="color: #ff2424;"></i>
             </div>
             <div id="items">
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/index.html">Home</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym2.html">About Us</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym3.html">Training</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html">Contact Us</a></li>
+                <li><a class="a1" href="index.html">Home</a></li>
+                <li><a class="a1" href="gym2.html">About Us</a></li>
+                <li><a class="a1" href="gym3.html">Training</a></li>
+                <li><a class="a1" href="gym5.html">Contact Us</a></li>
              
             </div>
         </nav>
@@ -261,10 +261,10 @@ input{
         <div class="row">
             <h4 class="hed" style="color: red;">Quick Links</h4>
             <ul>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/index.html">Home</a></li>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym2.html">About Us</a></li>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym3.html">Training</a></li>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html">Contact Us</a></li>
+                <li><a class="" href="index.html">Home</a></li>
+                <li><a class="" href="gym2.html">About Us</a></li>
+                <li><a class="" href="gym3.html">Training</a></li>
+                <li><a class="" href="gym5.html">Contact Us</a></li>
              
             </ul>
         </div>
