--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ footer{
     </div> -->
     <img id="img1" src="gym3.png" height="700px" width="1500px" alt="">
     <br><br>
-    <a href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html"><marquee behavior="alternate" direction="left" bgcolor="red" hspace="40%"><font face="candara" color="white" size="15px">JOIN US</font></marquee></a>
+    <a href="gym5.html"><marquee behavior="alternate" direction="left" bgcolor="red" hspace="40%"><font face="candara" color="white" size="15px">JOIN US</font></marquee></a>
     <br><br>
     <center>
         <table cellpadding="10px">
@@ -319,7 +319,7 @@ footer{
     <table cellpadding="5px" height="25px" width="1500px">
         <tr>
             <td bgcolor="black"><h4 class="fh " align="center"><font  color="white" size="7px">Get in Touch </font></h4><p class="fp" align="center"><img class="email" src="l1.jpg" alt="" height="20px" width="25px">&nbsp;<font face="candara" color="red">RajajiNagr Banglore <br><br><img class="email" src="c1.jpg" alt="" height="20px" width="25px">&nbsp;&nbsp;&nbsp;7019712231 <br><br><img class="email" src="message_3548404.png" alt="email">&nbsp;&nbsp;MyFitness@gmail.com</p></font></td>
-            <td bgcolor="black"><h4 class="fh" align="center"><font  color="Red" size="7px">Quick Links</font></h4><p class="fp" align="center"><font face="candara" color="white" size="3px"><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/index.html">Home </a><br><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym2.html"> About Us</a> <br><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym3.html">Training </a> <br><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html"> Contact Us</a></font></p></td>
+            <td bgcolor="black"><h4 class="fh" align="center"><font  color="Red" size="7px">Quick Links</font></h4><p class="fp" align="center"><font face="candara" color="white" size="3px"><a class="a1" href="index.html">Home </a><br><a class="a1" href="gym2.html"> About Us</a> <br><a class="a1" href="gym3.html">Training </a> <br><a class="a1" href="gym5.html"> Contact Us</a></font></p></td>
             <td bgcolor="black"><h4 class="fh" align="center"><font  color="white" size="7px">Opening Hours</font></h4><p class="fp" align="center"><font face="candara" color="red" size="4px">Morning-Saturday <br><font face="candara" color="white" size="4px"> 6am-11pm</font> <br> Sundya <br><font face="candara" color="white" size="4px"> 8am-1pm</font></font></p></td>
         </tr>
         
@@ -340,10 +340,10 @@ footer{
         <div class="row">
             <h4 class="hed" style="color: red;">Quick Links</h4>
             <ul>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/index.html">Home</a></li>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym2.html">About Us</a></li>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym3.html">Training</a></li>
-                <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html">Contact Us</a></li>
+                <li><a class="" href="index.html">Home</a></li>
+                <li><a class="" href="gym2.html">About Us</a></li>
+                <li><a class="" href="gym3.html">Training</a></li>
+                <li><a class="" href="gym5.html">Contact Us</a></li>
              
             </ul>
         </div>
