--- a/gym2.html
+++ b/gym2.html
@@ -166,10 +166,10 @@ footer{
                     <span style="color: red;">My</span>Fitness<i class="fa-solid fa-dumbbell fa-flip-both fa-lg" style="color: #ff2424;"></i>
             </div>
             <div id="items">
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/index.html">Home</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym2.html">About Us</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym3.html">Training</a></li>
-                <li><a class="a1" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html">Contact Us</a></li>
+                <li><a class="a1" href="index.html">Home</a></li>
+                <li><a class="a1" href="gym2.html">About Us</a></li>
+                <li><a class="a1" href="gym3.html">Training</a></li>
+                <li><a class="a1" href="gym5.html">Contact Us</a></li>
              
             </div>
         </nav>
@@ -179,7 +179,7 @@ footer{
     </div>
     <!-- <img src="bg.jpg" alt="" height="600px" width="1500px"> -->
     <br><br><br><br>
-    <a href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html"><marquee behavior="alternate" direction="left" bgcolor="white" hspace="40%"><font face="candara" color="red" size="15px">JOIN US</font></marquee></a>
+    <a href="gym5.html"><marquee behavior="alternate" direction="left" bgcolor="white" hspace="40%"><font face="candara" color="red" size="15px">JOIN US</font></marquee></a>
     <h1 align="center"><font face="candara" color="red" size="20px">About Us</font></h1>
 
     <center>
@@ -222,10 +222,10 @@ footer{
             <div class="row">
                 <h4 class="hed" style="color: red;">Quick Links</h4>
                 <ul>
-                    <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/index.html">Home</a></li>
-                    <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym2.html">About Us</a></li>
-                    <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym3.html">Training</a></li>
-                    <li><a class="" href="file:///C:/Users/Yashwanth/Desktop/Web/Task/gym5.html">Contact Us</a></li>
+                    <li><a class="" href="index.html">Home</a></li>
+                    <li><a class="" href="gym2.html">About Us</a></li>
+                    <li><a class="" href="gym3.html">Training</a></li>
+                    <li><a class="" href="gym5.html">Contact Us</a></li>
                  
                 </ul>
             </div>
